updated the index html file

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <body>
         <h1>Designer Salad</h1>
         <img class="arugula" src="images/Arugula.png" alt="Arugula">
-        <p>My first known encounter with arugula was when I had it in a pasta dish in a restaruant in <a href="https://www.nycgo.com/">New York City</a>.
-            I guess this experience stuck out in my mind because a lettuce was being put in a pasta dish, and my only 
-            previous experience with that was with spinach.</p>
+        <p>My first known encounter with  <a href="https://en.wikipedia.org/wiki/Eruca_vesicaria">arugula</a> was when I had it in a pasta dish in a restaruant in New York City.
+            I guess this experience stuck out in my mind because what I thought of as a lettuce was being put in a pasta dish, and my only 
+            previous experience with a leafy green vegetable in pasta was with spinach.  My second memory was when I was in London.  There I learned that in other countries arugula is known as rocket. On a trip to Italy, I had a pizza with tomatos, 
+            capers, buffalo mozzerlla, anchovies, with lots of arugula on top.  I believe that experince was when I became a true arugula fan.</p>
         <p>I enjoy eating arugula the following ways:</p>
         <ul>
             <li>in salads</li>
@@ -22,7 +23,7 @@
         <p>The name of this page is "Designer Salad" because my mother always 
             teases me and calls arugula designer salad whenever I use it in meals.  
             She is a romain salad eater and says that arugula is not sturdy enough. I understand
-            where she is coming from, but I stil love me some arugula.  
+            where she is coming from, but I still love me some arugula!  
         </p>
         <button>Change user</button>
         <script src="scripts/main.js"></script>
