--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <img class="arugula" src="images/Arugula.png" alt="Arugula">
         <p>My first known encounter with  <a href="https://en.wikipedia.org/wiki/Eruca_vesicaria">arugula</a> was when I had it in a pasta dish in a restaruant in New York City.
             I guess this experience stuck out in my mind because what I thought of as a lettuce was being put in a pasta dish, and my only 
-            previous experience with a leafy green vegetable in pasta was with spinach.  My second memory was when I was in London.  There I learned that in other countries arugula is known as rocket. On a trip to Italy, I had a pizza with tomatos, 
-            capers, buffalo mozzerlla, anchovies, with lots of arugula on top.  I believe that experince was when I became a true arugula fan.</p>
+            previous experience with a leafy green vegetable in pasta was with spinach.  My second memory was when I was in London.  There I learned that in other countries arugula is known as rocket. On a trip to Italy, I had a pizza with tomatoes, 
+            capers, buffalo mozzarella, anchovies, with lots of arugula on top.  I believe that experince was when I became a true arugula fan.</p>
         <p>I enjoy eating arugula the following ways:</p>
         <ul>
             <li>in salads</li>
@@ -22,7 +22,7 @@
         </ul>
         <p>The name of this page is "Designer Salad" because my mother always 
             teases me and calls arugula designer salad whenever I use it in meals.  
-            She is a romain salad eater and says that arugula is not sturdy enough. I understand
+            She is a romaine salad eater and says that arugula is not sturdy enough. I understand
             where she is coming from, but I still love me some arugula!  
         </p>
         <button>Change user</button>
